--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
+    "dev:tls": "next dev --experimental-https",
     "build": "next build",
     "start": "next start",
     "lint": "eslint",
