--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     ]
   },
   "dependencies": {
+    "lottie-web": "^5.13.0",
     "next": "^16.1.6",
     "react": "19.2.0",
     "react-dom": "19.2.0"
