--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "test:ui": "playwright test --ui",
     "test:headed": "playwright test --headed",
     "parse-legal-notice": "tsx scripts/parse-legal-notice.ts",
+    "update-article-link-map": "python3 scripts/update-article-link-map.py",
     "prepare": "husky"
   },
   "lint-staged": {
